--- a/app/src/main/res/layout/order_item_layout.xml
+++ b/app/src/main/res/layout/order_item_layout.xml
@@ -20,7 +20,7 @@
 
 
             <LinearLayout
-                android:layout_width="100dp"
+                android:layout_width="10dp"
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:orientation="vertical">
@@ -29,8 +29,7 @@
                 <com.makeramen.roundedimageview.RoundedImageView
                     android:id="@+id/image_logo"
                     android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:src="@mipmap/ic_launcher_round" />
+                    android:layout_height="50dp" />
 
             </LinearLayout>
 
@@ -58,7 +57,7 @@
                         android:layout_marginBottom="1dp"
                         android:text="Pizza Hut"
                         android:textColor="?attr/colorNormal"
-                        android:textSize="@dimen/normal_text_size"></com.haris.meal4u.TextviewUtil.NormalTextview>
+                        android:textSize="@dimen/normal_text_size" />
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -74,7 +73,7 @@
                             android:layout_marginTop="0dp"
                             android:padding="0dp"
                             android:src="@drawable/ic_calendar_outline"
-                            android:tint="?attr/colorTagline"></ImageView>
+                            android:tint="?attr/colorTagline"/>
 
                         <com.haris.meal4u.TextviewUtil.TaglineTextview
                             android:id="@+id/txt_date"
@@ -82,8 +81,8 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="5dp"
                             android:text="26 May 2019"
-                            android:textColor="?attr/colorTagline"
-                            android:textSize="@dimen/tagline_text_size"></com.haris.meal4u.TextviewUtil.TaglineTextview>
+                            android:textColor="?attr/colorNormal"
+                            android:textSize="@dimen/tagline_text_size"/>
 
 
                         <ImageView
@@ -170,15 +169,15 @@
                             android:layout_height="wrap_content"
                             android:text="@string/delivery"
                             android:textColor="?attr/colorTagline"
-                            android:textSize="@dimen/tagline_text_size"></com.haris.meal4u.TextviewUtil.TaglineTextview>
+                            android:textSize="@dimen/tagline_text_size"/>
 
                         <com.haris.meal4u.TextviewUtil.NormalTextview
                             android:id="@+id/txt_delivery_time"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="45 min"
+                            android:text="30 min"
                             android:textColor="?attr/colorNormal"
-                            android:textSize="@dimen/normal_text_size"></com.haris.meal4u.TextviewUtil.NormalTextview>
+                            android:textSize="@dimen/normal_text_size"/>
 
 
                     </LinearLayout>
