--- a/app/src/main/res/layout/wallet_transaction.xml
+++ b/app/src/main/res/layout/wallet_transaction.xml
@@ -16,31 +16,28 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:weightSum="1">
 
         <TextView
             android:id="@+id/wallet_amount"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight=".5"
-            android:background="@drawable/image_bg"
             android:gravity="center"
-            android:padding="8dp"
-            android:text="Total ₹ 00.00"
+            android:padding="18dp"
+            android:text="₹ 00.00"
             android:textColor="@color/text_color"
-            android:textSize="18sp"
+            android:textSize="28sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/add_to_bag"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="2dp"
-            android:layout_weight=".5"
+            android:layout_margin="20dp"
             android:background="@drawable/image_bg"
             android:gravity="center"
-            android:padding="8dp"
+            android:padding="12dp"
             android:text="Add Money"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="18sp"
