--- a/app/src/main/res/layout/wallet_transaction.xml
+++ b/app/src/main/res/layout/wallet_transaction.xml
@@ -57,10 +57,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
-            android:orientation="vertical">
-
-
-        </LinearLayout>
+            android:orientation="vertical"/>
 
     </ScrollView>
 
